Fixed CSS issue, so it is not incredibly stretched

--- a/styles/Predator.css
+++ b/styles/Predator.css
@@ -62,6 +62,11 @@
     gap: 10px;
 }
 
+#bad-list img {
+    width: 100px;
+    height: 100px;
+}
+
 li {
     border: 1px;
     border-style: solid;
